FirstPage.html güncellendi - Ses dosyası yolu düzeltildi

--- a/FirstPage.html
+++ b/FirstPage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <audio autoplay loop>
-        <source src="surfs.mp3" type="audio/mpeg">
+        <source src="https://anilusta.github.io/Projects/surfs.mp3" type="audio/mpeg">
     </audio>
     <h1>Şirinler</h1>
     <h2>Neşeli Mavi Dostlarımız</h2>
